# triangle-stacking

./: .gitignore  CMakeLists.txt  README.md  example_stats.csv  lunch.save  main.cpp  pipe.save
distributed/: client.ts  messages.d.ts  server.ts
resources/: lunch.save
saves/: lunch.save  pipe_example.save
src/: colour.cc  colour.h  image.cc  image.h  main.cc  test.cc  triangle.cc  triangle.h  triangulator.cc  triangulator.h
